Fixed base url | attempt 5

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.3",
-    "nuxt": "^2.0.0"
+    "node-sass": "^4.9.3",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
